--- a/GeradorUsuario.Angular/src/app/components/usuario/usuario-detalhe/usuario-detalhe.component.html
+++ b/GeradorUsuario.Angular/src/app/components/usuario/usuario-detalhe/usuario-detalhe.component.html
@@ -1,3 +1,22 @@
-<p>
-  usuario-detalhe works!
-</p>
+<div class="container">
+  <h2>Detalhes do Usuário</h2>
+
+  <form [formGroup]="profileForm">
+    <div>
+      <label for="id">ID:</label>
+      <input type="text" id="id" formControlName="id" readonly>
+    </div>
+
+    <div>
+      <label for="nomeUsuario">Nome do Usuário:</label>
+      <input type="text" id="nomeUsuario" formControlName="nomeUsuario">
+    </div>
+
+    <div>
+      <label for="email">E-mail:</label>
+      <input type="email" id="email" formControlName="email">
+    </div>
+
+    <button type="button" (click)="salvarUsuario()">Salvar</button>
+  </form>
+</div>
