--- a/GeradorUsuario.Angular/src/app/components/usuario/usuario-detalhe/usuario-detalhe.component.html
+++ b/GeradorUsuario.Angular/src/app/components/usuario/usuario-detalhe/usuario-detalhe.component.html
@@ -16,6 +16,11 @@
       <label for="email">E-mail:</label>
       <input type="email" id="email" formControlName="email">
     </div>
+    
+    <div>
+      <label for="senha">Senha:</label>
+      <input type="password" id="senha" formControlName="senha">
+    </div>
 
     <button type="button" (click)="salvarUsuario()">Salvar</button>
   </form>
