--- a/GeradorUsuario.Angular/src/app/components/usuario/usuario.component.html
+++ b/GeradorUsuario.Angular/src/app/components/usuario/usuario.component.html
@@ -1,3 +1,5 @@
 <app-titulo [titulo]="'Usuarios'" [iconClass]="'fas fa-users'"></app-titulo>
 
-<router-outlet />
+<div class="card rounded shadow p-3">
+    <router-outlet />
+</div>
