--- a/GeradorUsuario.Angular/src/app/shared/nav/nav.component.html
+++ b/GeradorUsuario.Angular/src/app/shared/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg bg-gradient">
   <a class="navbar-brand" href="#">GeradorUsuario</a>
   <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNav" [collapse]="isCollapsed" [isAnimated]="true">
     <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="usuario">Usuario</a>
+        <a class="nav-link" routerLink="usuario">Usuários</a>
       </li>
     </ul>
   </div>
