--- a/GeradorUsuario.Angular/src/app/shared/titulo/titulo.component.html
+++ b/GeradorUsuario.Angular/src/app/shared/titulo/titulo.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex p-3 my-3 bg-secondary rounded shadow-sm">
+<div class="d-flex p-3 my-3 rounded shadow-sm bg-gradient">
 <div class="d-flex align-items-center mr-auto">
 <i class="{{iconClass}} me-3"></i>
 <div class="lh-100">
